# rpc

./: .gitmodules  CMakeLists.txt
cmake/: proto.cmake
generator/: CMakeLists.txt  FileGenerator.cpp  FileGenerator.h  RpcGenerator.cpp  RpcGenerator.h  ServiceGenerator.cpp  ServiceGenerator.h  cpp_helpers.h  main.cpp  strutil.h
include/rpc/: Base.h  Channel.h  Exceptions.h  Future.h  LocalHandler.h
protocols/: CMakeLists.txt  rpc_base.proto
src/: Channel.cpp  ChannelSink.cpp  ChannelSink.h  Exceptions.cpp  Future.cpp  LocalHandler.cpp  Stream.h
tests/: CMakeLists.txt  RpcChannelTests.cpp
tests/protocols/: CMakeLists.txt  test_service.proto
